styles.css
:root {
    --clr-dark: #070a13;
    --clr-light: white;
    /* #e3edf7 */
}


*,
*::before,
*::after{
    box-sizing: border-box;
}

*{
    margin: 0;
    padding: 0;
    background-color: rgb(255, 255, 255);
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
}

.dark-mode {
    --clr-light: #222831;
    --clr-dark: white;
}

/* UI */
.body{
    width: 100vw;
    height: 100vh;

    background-color: var(--clr-light);
    color: var(--clr-dark);

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

/* Header Ribbon */
#header{
    width: 100vw;
    height: 10vh;
    padding: 0 1em;
    border-bottom: solid 2px black;
    box-shadow: 0px 2px 5px grey;

    background-color: var(--clr-light);
    color: var(--clr-dark);

    display: flex;
    justify-content: space-between;
    align-items: center;
}
#header1{
    background-color: var(--clr-light);
    color: var(--clr-dark);
}
.header{
    width: 8em;
    height: 3em;
    text-align: center;
    line-height: 3em;
}

#timer{
    border: 2px solid black;
    border-radius: 8px;
    background-color: var(--clr-light);
    color: var(--clr-dark);
}

#coins{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 0.5em;
    background: transparent;
}

/* Main Space */
.main {
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: var(--clr-light);
    color: var(--clr-dark);
}

#countdown_svg{
    position: absolute;
    background-color: transparent;
}

#countdown_svg>circle{
    fill: none;
    stroke: #e25100;
    stroke-width: 33px;
}

/* CAT */
.catTimerOuter{
    background-color: var(--clr-light);
    color: var(--clr-dark);

    display: flex;
    justify-content: center;
    align-items: center;
    height: 40vh;
    width: 40vh;
    border: 1px solid #000000;
    border-radius: 50%;
    position: relative;
    /*
    box-shadow: 10px 10px 10px -1px rgba(0, 0, 0, 0.15),
                -10px -10px 10px -1px rgba(255, 255, 255, 0.7);
    */
}

.catTimerInner{
    width: 33vh;
    height: 33vh;
    border: 1px solid black;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    
    background-color: var(--clr-light);
    color: var(--clr-dark);
}

.catbtn {
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    background: transparent;
}

.catbtn img {
    max-width: 90%;
    background: transparent;
}

.catbtn img:hover {
    cursor: pointer;
}

/* Footer Ribbon */
.footer{
    width: 100vw;
    height: 10vh;
    border-top: solid 2px black;
    box-shadow: 0px -2px 5px grey;

    background-color: var(--clr-light);
    color: var(--clr-dark);
}


/* SETTINGS */

.dark-mode #settingBtn img{
    filter: invert(1);
}

#settingBtn {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    border: none;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    background: transparent;
}

.modal {
    display: none;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.3);
    display: flex;
    align-items: center;
    justify-content: center;
}

.modal.show {
    display: flex;
    pointer-events: auto;
    
    background-color: var(--clr-light);
    color: var(--clr-dark);
}

.modal-content {
    background-color: white;
    border-radius: 8px;
    border: 2px solid black;
    padding: 20px;
    width: 300px;
    text-align: center;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);

    background-color: var(--clr-light);
    color: var(--clr-dark);
}

.close {
    color: black;
    float: right;
    font-size: 25px;
    font-weight: bold;
    cursor: pointer;
}

.close:hover {
    color:grey;
}

.settingOptions {
    display: flex;
    flex-direction: column;
    gap: 10px;

    background-color: var(--clr-light);
    color: var(--clr-dark);
}

.option {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 250px;
    padding: 8px 8px;
    gap: 20px;

    background-color: var(--clr-light);
    color: var(--clr-dark);
}

.toggle {
    display: flex;
    position: relative;
    display: inline-block;
    justify-items: center;
    align-items: center;
    width: 60px;
    height: 34px;
    flex-shrink: 0;
    
    background-color: var(--clr-light);
    color: var(--clr-dark);
}

.toggle input{
    opacity: 0;
    width: 0;
    height: 0;

    background-color: var(--clr-light);
    color: var(--clr-dark);
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;  
    background-color: #ccc;
    border-radius: 34px;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider::before{
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

.toggle input:checked + .slider {
    background-color: #171717;
}

input:focus + .slider {
    box-shadow: 0 0 5px black;
}

.toggle input:checked + .slider::before {
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

.slider.round {
    border-radius: 34px;
}   

.slider:before {
    border-radius: 50%;
}

#darkmodeH2, .close {
    background-color: var(--clr-light);
    color: var(--clr-dark);
}

.label {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    font-size: 20px;
    padding: 8px 16px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);

    background-color: var(--clr-light);
    color: var(--clr-dark);
}

